@@ -50,7 +50,7 @@ Rcgminu <- function(par, fn, gr, control = list(), ...) {
     #  Author:  John C Nash
     #  Date:  April 2, 2009; revised July 28, 2009
     #################################################################
-    # control defaults -- idea from spg
+    # control defaults -- idea from spg. ?? Should use ctrldefault()
     ctrl <- list(maxit = 500, maximize = FALSE, trace = 0, eps = 1e-07, 
         dowarn = TRUE, tol=0)
     namc <- names(control)
@@ -80,7 +80,7 @@ Rcgminu <- function(par, fn, gr, control = list(), ...) {
     #############################################
     # gr MUST be provided
     if (is.null(gr)) {  # if gr function is not provided STOP (Rvmmin has definition)
-       stop("A gradient calculation (analytic or numerical) MUST be provided for Rvmminb") 
+       stop("A gradient calculation (analytic or numerical) MUST be provided for Rcgmin") 
     }
     if ( is.character(gr) ) {
        # Convert string to function call, assuming it is a numerical gradient function
@@ -101,7 +101,7 @@ Rcgminu <- function(par, fn, gr, control = list(), ...) {
     ifn <- 1  # count function evaluations (we always make 1 try below)
     stepredn <- 0.15  # Step reduction in line search
     acctol <- 1e-04  # acceptable point tolerance
-    reltest <- 100  # relative equality test
+    offset <- 100  # relative equality test
     accpoint <- as.logical(FALSE)  # so far do not have an acceptable point
     cyclimit <- min(2.5 * n, 10 + sqrt(n))  #!! upper bound on when we restart CG cycle
     #!! getting rid of limit makes it work on negstart BUT inefficient
@@ -192,7 +192,7 @@ Rcgminu <- function(par, fn, gr, control = list(), ...) {
             }
             c <- g  # save last gradient
             g3 <- 1  # !! Default to 1 to ensure it is defined -- t==0 on first cycle
-            if (gradsqr > tol * (abs(fmin) + reltest)) {
+            if (gradsqr > tol * (abs(fmin) + offset)) {
                 if (g2 > 0) {
                   betaDY <- gradsqr/g2
                   betaHS <- g1/g2
@@ -241,7 +241,7 @@ Rcgminu <- function(par, fn, gr, control = list(), ...) {
                 changed <- TRUE  # Need to set so loop will start
                 while ((f >= fmin) && changed) {
                   bvec <- par + steplength * t
-                  changed <- (!identical((bvec + reltest), (par + reltest)))
+                  changed <- (!identical((bvec + offset), (par + offset)))
                   if (changed) {
                     # compute newstep, if possible
                     f <- fn(bvec, ...)  # Because we need the value for linesearch, don't use try()
@@ -274,15 +274,15 @@ Rcgminu <- function(par, fn, gr, control = list(), ...) {
                       newstep = -(gradproj * steplength * steplength/newstep)
                     }
                     bvec <- par + newstep * t
-                    changed <- (!identical((bvec + reltest), 
-                      (par + reltest)))
+                    changed <- (!identical((bvec + offset), 
+                      (par + offset)))
                     if (changed) {
                       f <- fn(bvec, ...)
                       ifn <- ifn + 1
                     }
                     if (trace > 2) 
                       cat("fmin, f1, f: ", fmin, f1, f, "\n")
-                    if (isTRUE(f < min(fmin, f1))) {
+                    if (f < min(fmin, f1)) {
                       # success
                       OKpoint <- TRUE
                       accpoint <- (f <= fmin + gradproj * newstep * 
